--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Todo App</title>
+    <title>Contact Keeper</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
